fix: lock icon is no longer cut off and now lock.css has its own css component

--- a/src/App.css
+++ b/src/App.css
@@ -298,73 +298,6 @@ input:checked + label:before {
   border-color: var(--primary-color);
 }
 
-.lock-status.locked {
-  color: var(--safe-color);
-  background-color: var(--safe-color-bg);
-}
-
-.lock-status.unlocked {
-  color: var(--danger-color);
-  background-color: var(--danger-color-bg);
-}
-
-.lock-display {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-  margin: 20px 0;
-}
-
-.lock-display svg {
-  font-size: 4rem;
-  padding: 2.5rem;
-  border-radius: 50%;
-}
-
-.lock-display.locked svg {
-  color: var(--safe-color);
-  background-color: var(--safe-color-bg);
-}
-
-.lock-display.unlocked svg {
-  color: var(--danger-color);
-  background-color: var(--danger-color-bg);
-}
-
-.unlock-btn {
-  width: 100%;
-  background-color: var(--safe-color);
-  color: white;
-  border: none;
-  padding: 1rem;
-  border-radius: 8px;
-  font-size: 1rem;
-  font-weight: 600;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.unlock-btn:hover {
-    background-color: #48c9b0;
-}
-
-.lock-btn {
-  width: 100%;
-  background-color: var(--danger-color);
-  color: white;
-  border: none;
-  padding: 1rem;
-  border-radius: 8px;
-  font-size: 1rem;
-  font-weight: 600;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.lock-btn:hover {
-    background-color: #e65252;
-}
 
 .device-footer {
   margin-top: 1.5rem;
